// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component(PopoverItem) should display the PopoverItem 1`] = `
<body>
  <div>
    <button
      class="popoverItem"
    >
      <div
        class="content"
      />
    </button>
  </div>
</body>
`;

exports[`Component(PopoverItem) should support overriding the type 1`] = `
<body>
  <div>
    <a
      class="popoverItem"
      href="https://silvy.rains.cafe"
    >
      <div
        class="content"
      />
    </a>
  </div>
</body>
`;
